[gd_scene load_steps=12 format=2]

[ext_resource path="res://art/sprites/virus_redondo/1.png" type="Texture" id=1]
[ext_resource path="res://code/virus_float.gd" type="Script" id=2]
[ext_resource path="res://art/sprites/virus_redondo/2.png" type="Texture" id=3]
[ext_resource path="res://art/sprites/virus_redondo/3.png" type="Texture" id=4]
[ext_resource path="res://art/sprites/virus_redondo/6.png" type="Texture" id=5]
[ext_resource path="res://art/sprites/virus_redondo/4.png" type="Texture" id=6]
[ext_resource path="res://art/sprites/virus_redondo/7.png" type="Texture" id=7]
[ext_resource path="res://art/sprites/virus_redondo/5.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.8299, 8.91776 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "redondo",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 19.8454

[node name="Virus_float" type="RigidBody2D"]
collision_layer = 32
collision_mask = 2
gravity_scale = 1.32
script = ExtResource( 2 )

[node name="time_life" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "redondo"
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.64931, -1.99652 )
scale = Vector2( 1.87674, 1.96354 )
[connection signal="timeout" from="time_life" to="." method="_on_time_life_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
